networking/netpol/netpol-allowtag.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permit-labelmatch
spec:
  podSelector: 
   matchLabels:
     app: test
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - {}
