networking/netpol/netpol-egress-allowall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-all
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
