networking/netpol/netpol-egress-denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Egress
