networking/netpol/netpol-ingress-allowall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-all
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
