networking/netpol/netpol-ingress-allowtag.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-tag
spec:
  podSelector:
    matchLabels:
      app: alpha
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: alpha
