networking/netpol/netpol-ingress-cidrpermit.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test3
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/16
        except:
        - 192.168.25.0/24
    ports:
    - protocol: TCP
      port: 6443
    - protocol: TCP
      port: 15443
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 9411
